docs: improve endpoints swagger descriptions
