# cardinal/plugin_receipt.go
@@ -57,12 +57,12 @@ func (p *receiptPlugin) RegisterQueries(world *World) error {
 // queryReceipts godoc
 //
 //	@Summary		Get transaction receipts from Cardinal
-//	@Description	Get transaction receipts from Cardinal
+//	@Description	Retrieves all transaction receipts from Cardinal
 //	@Accept			application/json
 //	@Produce		application/json
-//	@Param			ListTxReceiptsRequest	body		ListTxReceiptsRequest	true	"List Transaction Receipts Request"
-//	@Success		200						{object}	ListTxReceiptsResponse
-//	@Failure		400						{string}	string	"Invalid transaction request"
+//	@Param			ListTxReceiptsRequest	body		ListTxReceiptsRequest	true	"Query body"
+//	@Success		200						{object}	ListTxReceiptsResponse "List of receipts"
+//	@Failure		400						{string}	string	"Invalid request body"
 //	@Router			/query/receipts/list [post]
 func queryReceipts(ctx engine.Context, req *ListTxReceiptsRequest) (*ListTxReceiptsResponse, error) {
 	reply := ListTxReceiptsResponse{}
