# cardinal/server/docs/swagger.yaml
@@ -136,9 +136,9 @@ paths:
     post:
       consumes:
       - application/json
-      description: Query the ecs with CQL (cardinal query language)
+      description: Runs the provided CQL query on Cardinal and return the results
       parameters:
-      - description: cql (cardinal query language)
+      - description: CQL query to be executed
         in: body
         name: cql
         required: true
@@ -148,61 +148,61 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: CQL query result
           schema:
             $ref: '#/definitions/handler.CQLQueryResponse'
-      summary: Query the ecs with CQL (cardinal query language)
-  /debug/state:
-    post:
-      description: Displays the entire game state.
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/handler.debugStateElement'
-            type: array
-        "500":
-          description: Internal server error
+        "400":
+          description: Invalid request body or invalid CQL query
           schema:
             type: string
-      summary: Get all entities and components in Cardinal
+      summary: Query game entities with CQL (cardinal query language)
   /events:
     get:
-      description: websocket connection for events.
+      description: Websocket connection for events.
       produces:
       - application/json
       responses:
         "101":
-          description: switch protocol to ws
+          description: Switch protocol to ws
           schema:
             type: string
       summary: Endpoint for events
   /health:
     get:
-      description: Displays information on http server and world game loop
+      description: Retrieves the running status of the Cardinal server and game loop
       produces:
       - application/json
       responses:
         "200":
-          description: OK
+          description: Server and game loop status
           schema:
             $ref: '#/definitions/handler.GetHealthResponse'
-      summary: Get information on status of world-engine
-  /query/game/{queryType}:
+      summary: Get the World Engine's health status
+  /query/debug/state:
+    post:
+      description: Retrieves a list of all entities in the game state
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of entities
+          schema:
+            items:
+              $ref: '#/definitions/cardinal.debugStateElement'
+            type: array
+      summary: Get all game entities
+  /query/game/{queryName}:
     post:
       consumes:
       - application/json
-      description: Query the ecs
+      description: Runs a registered query on Cardinal and returns the results
       parameters:
-      - description: The query type
+      - description: Name of the registered query
         in: path
-        name: queryType
+        name: queryName
         required: true
         type: string
-      - description: Query Body
+      - description: Query body
         in: body
         name: queryBody
         required: true
@@ -212,21 +212,20 @@ paths:
       - application/json
       responses:
         "200":
-          description: query response
+          description: Query results
           schema:
             type: object
         "400":
-          description: Invalid query request
+          description: Invalid request body or invalid query body
           schema:
             type: string
-      summary: Query the ecs
   /query/receipts/list:
     post:
       consumes:
       - application/json
-      description: Get transaction receipts from Cardinal
+      description: Retrieves all transaction receipts from Cardinal
       parameters:
-      - description: List Transaction Receipts Request
+      - description: Query body
         in: body
         name: ListTxReceiptsRequest
         required: true
@@ -236,52 +235,52 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: List of receipts
           schema:
             $ref: '#/definitions/cardinal.ListTxReceiptsResponse'
         "400":
-          description: Invalid transaction request
+          description: Invalid request body
           schema:
             type: string
       summary: Get transaction receipts from Cardinal
-  /tx/game/{txType}:
+  /tx/game/{txName}:
     post:
       consumes:
       - application/json
-      description: Submit a transaction to Cardinal / Create a Persona transaction
-        to Cardinal
+      description: Submits a message to Cardinal and returns the transaction hash
+        and tick
       parameters:
-      - description: label of the transaction that wants to be submitted
-        in: path
-        name: txType
-        required: true
-        type: string
-      - description: Transaction details
+      - description: Message body
         in: body
         name: txBody
         required: true
         schema:
           $ref: '#/definitions/handler.Transaction'
+      - description: Name of the registered message
+        in: path
+        name: txName
+        required: true
+        type: string
       produces:
       - application/json
       responses:
         "200":
-          description: OK
+          description: Transaction hash and tick
           schema:
             $ref: '#/definitions/handler.PostTransactionResponse'
         "400":
-          description: Invalid transaction request
+          description: Invalid request body
           schema:
             type: string
-      summary: Submit a transaction to Cardinal
+      summary: Submit a message to Cardinal
   /tx/persona/create-persona:
     post:
       consumes:
       - application/json
-      description: Submit a transaction to Cardinal / Create a Persona transaction
-        to Cardinal
+      description: Creates a persona in Cardinal and returns the transaction hash
+        and tick
       parameters:
-      - description: Transaction details
+      - description: Message body
         in: body
         name: txBody
         required: true
@@ -291,31 +290,31 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: Transaction hash and tick
           schema:
             $ref: '#/definitions/handler.PostTransactionResponse'
         "400":
-          description: Invalid transaction request
+          description: Invalid request body
           schema:
             type: string
-      summary: Submit a transaction to Cardinal
+      summary: Create a persona
   /world:
     get:
       consumes:
       - application/json
-      description: Get field information of registered components, messages, queries
+      description: Retrieves details of registered components, messages, and queries
       produces:
       - application/json
       responses:
         "200":
-          description: Field information of registered components, messages, queries
+          description: List of registered components, messages, and queries
           schema:
             $ref: '#/definitions/handler.GetWorldResponse'
         "400":
-          description: Bad Request
+          description: Invalid request body
           schema:
             type: string
-      summary: Get field information of registered components, messages, queries
+      summary: Get registered components, messages, and queries
 schemes:
 - http
 - ws
