# cardinal/server/handler/health.go
@@ -11,10 +11,10 @@ type GetHealthResponse struct {
 
 // GetHealth godoc
 //
-//	@Summary		Get information on status of world-engine
-//	@Description	Displays information on http server and world game loop
+//	@Summary		Get the World Engine's health status
+//	@Description	Retrieves the running status of the Cardinal server and game loop
 //	@Produce		application/json
-//	@Success		200	{object}	GetHealthResponse
+//	@Success		200	{object}	GetHealthResponse "Server and game loop status"
 //	@Router			/health [get]
 func GetHealth() func(c *fiber.Ctx) error {
 	return func(ctx *fiber.Ctx) error {
