# cardinal/server/handler/query.go
@@ -8,20 +8,20 @@ import (
 
 // PostQuery godoc
 //
-//	@Summary		Query the ecs
-//	@Description	Query the ecs
+//	@Summary		Run a query on Cardinal
+//	@Description	Runs a registered query on Cardinal and returns the results
 //	@Accept			application/json
 //	@Produce		application/json
-//	@Param			queryType	path		string	true	"The query type"
-//	@Param			queryBody	body		object	true	"Query Body"
-//	@Success		200			{object}	object	"query response"
-//	@Failure		400			{string}	string	"Invalid query request"
-//	@Router			/query/game/{queryType} [post]
+//	@Param			queryName	path		string	true	"Name of the registered query"
+//	@Param			queryBody	body		object	true	"Query body"
+//	@Success		200			{object}	object	"Query results"
+//	@Failure		400			{string}	string	"Invalid request body or invalid query body"
+//	@Router			/query/game/{queryName} [post]
 func PostQuery(queries map[string]map[string]engine.Query, wCtx engine.Context) func(*fiber.Ctx) error {
 	return func(ctx *fiber.Ctx) error {
 		query, ok := queries[ctx.Params("group")][ctx.Params("name")]
 		if !ok {
-			return fiber.NewError(fiber.StatusNotFound, "query type not found")
+			return fiber.NewError(fiber.StatusNotFound, "query name not found")
 		}
 
 		ctx.Set("Content-Type", "application/json")
